Controller methods added

--- a/JuniorDeveloperProject/appsettings.json
+++ b/JuniorDeveloperProject/appsettings.json
@@ -1,10 +1,21 @@
 {
-  "Logging": {
-      "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-      }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
     },
-"AllowedHosts": "*"
+
+    "ApplicationSettings": {
+        "TechTestApiBaseUrl": "https://dwp-techtest.herokuapp.com",
+        "TechTestApiGetUSersByCityPath": "/city/{city}/users",
+        "TechTestApiGetInstructionsPath": "/instructions",
+        "TechTestApiGetUserByIdPath": "/user/{id}",
+        "TechTestApiGetUsersPath": "/users",
+        "DefaultDistanceInMiles": "50",
+        "DefaultCordinatesLat": "51.5074",
+        "DefaultCordinatesLong": "-0.1277"
+    },
+    "AllowedHosts": "*"
 }
