CustomerDataConector methods refactored, Controller refactored and error pages added.

--- a/JuniorDeveloperProject/appsettings.json
+++ b/JuniorDeveloperProject/appsettings.json
@@ -9,7 +9,7 @@
 
     "ApplicationSettings": {
         "TechTestApiBaseUrl": "https://dwp-techtest.herokuapp.com",
-        "TechTestApiGetUSersByCityPath": "/city/{city}/users",
+        "TechTestApiGetUSersByCityPath": "/city/{city}/users1",
         "TechTestApiGetInstructionsPath": "/instructions",
         "TechTestApiGetUserByIdPath": "/user/{id}",
         "TechTestApiGetUsersPath": "/users",
